<resources>
    <string name="app_name">MyChimney</string>
    <string name="action_settings">Settings</string>

    <string name="vpn_item_name">VPN Name:</string>
    <string name="vpn_item_server">Server:</string>
    <string name="vpn_item_remote_port">Remote Port:</string>
    <string name="vpn_item_password">Password:</string>
    <string name="vpn_item_remote_DNS">Remote DNS:</string>
    <string name="emptyprompt">List is empty, please add vpn item first.</string>
    <string name="selectitem">please select item, then click start.</string>
</resources>
