<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:context=".EditVPNActivity"
    tools:showIn="@layout/activity_edit_vpn">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <!-- VPN NAME -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:text="@string/vpn_item_name"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/vpnname"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18dp" />

        </LinearLayout>


        <!-- SERVER -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:text="@string/vpn_item_server"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/servername"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18dp" />

        </LinearLayout>


        <!-- PORT -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:text="@string/vpn_item_remote_port"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/remoteport"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="18dp" />

        </LinearLayout>


        <!-- PASSWORD -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:text="@string/vpn_item_password"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/passwd"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:textSize="18dp" />

        </LinearLayout>


        <!-- DNS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:text="@string/vpn_item_remote_DNS"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/remotedns"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:textSize="18dp" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>